RCON system refactor and improvements
* Use game's CNetAdr RCON and socket creator.
* Add support for constructing host from [ip]:port format in the netconsole client.
* Pass 'netadr_t' parameter by reference to 'CSocketCreator::OnSocketAccepted'.

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -372,9 +372,6 @@
     <ClCompile Include="..\tier2\socketcreator.cpp">
       <Filter>sdk\tier2</Filter>
     </ClCompile>
-    <ClCompile Include="..\tier1\NetAdr2.cpp">
-      <Filter>sdk\tier1</Filter>
-    </ClCompile>
     <ClCompile Include="..\mathlib\sha256.cpp">
       <Filter>sdk\mathlib</Filter>
     </ClCompile>
@@ -674,6 +671,9 @@
     </ClCompile>
     <ClCompile Include="..\tier2\curlutils.cpp">
       <Filter>sdk\tier2</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\NetAdr.cpp">
+      <Filter>sdk\tier1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1177,9 +1177,6 @@
     </ClInclude>
     <ClInclude Include="..\tier2\socketcreator.h">
       <Filter>sdk\tier2</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier1\NetAdr2.h">
-      <Filter>sdk\tier1</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\sha256.h">
       <Filter>sdk\mathlib</Filter>
@@ -1984,6 +1981,9 @@
     </ClInclude>
     <ClInclude Include="..\tier2\curlutils.h">
       <Filter>sdk\tier2</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\NetAdr.h">
+      <Filter>sdk\tier1</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
