--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -630,9 +630,6 @@
     <ClInclude Include="..\mathlib\swap.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier1\NetAdr2.h">
-      <Filter>sdk\tier1</Filter>
-    </ClInclude>
     <ClInclude Include="..\mathlib\sha256.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
@@ -1386,6 +1383,9 @@
     <ClInclude Include="..\tier2\curlutils.h">
       <Filter>sdk\tier2</Filter>
     </ClInclude>
+    <ClInclude Include="..\tier1\NetAdr.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1492,9 +1492,6 @@
     </ClCompile>
     <ClCompile Include="..\tier2\socketcreator.cpp">
       <Filter>sdk\tier2</Filter>
-    </ClCompile>
-    <ClCompile Include="..\tier1\NetAdr2.cpp">
-      <Filter>sdk\tier1</Filter>
     </ClCompile>
     <ClCompile Include="..\mathlib\sha256.cpp">
       <Filter>sdk\mathlib</Filter>
@@ -1768,6 +1765,9 @@
     </ClCompile>
     <ClCompile Include="..\tier2\curlutils.cpp">
       <Filter>sdk\tier2</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\NetAdr.cpp">
+      <Filter>sdk\tier1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
