Update default RCON cfg's

--- a/r5dev/resource/cfg/rcon_server_dev.cfg
+++ b/r5dev/resource/cfg/rcon_server_dev.cfg
@@ -9,4 +9,4 @@ sv_rcon_banpenalty        "1"                // Number of minutes to ban IP befo
 sv_rcon_maxfailures       "5"                // Max number of tomes a user can ignore RCON authentication before being banned.
 sv_rcon_maxignores        "5"                // Max number of times a user can ignore the no-auth message before being banned.
 sv_rcon_maxsockets        "2"                // Max number of accepted sockets before the server starts closing redundant sockets.
-sv_rcon_whitelist_address "::ffff:127.0.0.1" // This IP will never get disconnected or banned. Enter your own IP address in the same format here (counts for IPv4 and IPv6).
+sv_rcon_whitelist_address ""                 // This IP will never get disconnected or banned. Enter your own IP address in the same format here (counts for IPv4 and IPv6).
