--- a/r5dev/resource/cfg/rcon_client_dev.cfg
+++ b/r5dev/resource/cfg/rcon_client_dev.cfg
@@ -3,5 +3,4 @@
 // See https://developer.valvesoftware.com/wiki/Source_RCON_Protocol for more information regarding RCON.
 // NOTE: This implementation is custom and differs slightly from Valve's implementation.
 
-rcon_password ""                   // !! WARNING !! Keep empty to disable RCON. Only enable this if you plan on using RCON.
-rcon_address  "[127.0.0.1]:37015"  // The RCON system will attempt to connect to this address when 'rcon' command is issued.
+rcon_address  "localhost"          // The RCON system will attempt to connect to this address when 'rcon' command is issued.
