--- a/r5dev/resource/cfg/rcon_server.cfg
+++ b/r5dev/resource/cfg/rcon_server.cfg
@@ -4,4 +4,4 @@
 // NOTE: This implementation is custom and differs slightly from Valve's implementation.
 
 rcon_password             ""                 // !! WARNING !! Keep empty to disable RCON. Only enable this if you plan on using RCON.
-sv_rcon_whitelist_address "::ffff:127.0.0.1" // This IP will never get disconnected or banned. Enter your own IP address in the same format here (counts for IPv4 and IPv6).
+sv_rcon_whitelist_address ""                 // This IP will never get disconnected or banned. Enter your own IP address in the same format here (counts for IPv4 and IPv6).
