--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -250,6 +250,9 @@
     <Filter Include="sdk\public\engine">
       <UniqueIdentifier>{027d27a1-089a-4ea1-b764-1b436c6d20a2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\public\appframework">
+      <UniqueIdentifier>{0c992b91-3491-4337-a630-c789e2654bc2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -740,6 +743,9 @@
     </ClCompile>
     <ClCompile Include="..\engine\server\sv_rcon.cpp">
       <Filter>sdk\engine\server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\appframework\IAppSystemGroup.cpp">
+      <Filter>sdk\public\appframework</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1291,9 +1297,6 @@
     </ClInclude>
     <ClInclude Include="..\common\netmessages.h">
       <Filter>sdk\common</Filter>
-    </ClInclude>
-    <ClInclude Include="..\appframework\iappsystem.h">
-      <Filter>sdk\appframework</Filter>
     </ClInclude>
     <ClInclude Include="..\appframework\engine_launcher_api.h">
       <Filter>sdk\appframework</Filter>
@@ -2155,6 +2158,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\server\sv_rcon.h">
       <Filter>sdk\engine\server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\appframework\IAppSystemGroup.h">
+      <Filter>sdk\public\appframework</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\appframework\IAppSystem.h">
+      <Filter>sdk\public\appframework</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
