Disable server hitbox debug draw by default
Disabled by default in development cfg's.

--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -17,7 +17,7 @@ base_tickinterval_mp         "0.05"   // Sets the num simulation frames per seco
 //////////////////////////
 //// DEBUG DRAW       ////
 //////////////////////////
-sv_showhitboxes              "0"      // Send server-side hitboxes for specified entity to client (!slower!).
+sv_showhitboxes              "-1"     // Send server-side hitboxes for specified entity to clients (!slower!).
 sv_showlagcompensation       "1"      // Show lag compensated hitboxes whenever a player is lag compensated (!slower!).
 sv_visualizetraces           "1"      // Show native and script related debug tracing (!slower!).
 
