--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -693,9 +693,6 @@
     <ClCompile Include="..\public\utility\vtable.cpp">
       <Filter>sdk\public\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\public\utility\crashhandler.cpp">
-      <Filter>sdk\public\utility</Filter>
-    </ClCompile>
     <ClCompile Include="..\game\server\networkproperty.cpp">
       <Filter>sdk\game\server</Filter>
     </ClCompile>
@@ -746,6 +743,9 @@
     </ClCompile>
     <ClCompile Include="..\public\appframework\IAppSystemGroup.cpp">
       <Filter>sdk\public\appframework</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier0\crashhandler.cpp">
+      <Filter>sdk\tier0</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2030,9 +2030,6 @@
     <ClInclude Include="..\public\utility\vtable.h">
       <Filter>sdk\public\utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\utility\crashhandler.h">
-      <Filter>sdk\public\utility</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\eiface.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
@@ -2164,6 +2161,9 @@
     </ClInclude>
     <ClInclude Include="..\public\appframework\IAppSystem.h">
       <Filter>sdk\public\appframework</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier0\crashhandler.h">
+      <Filter>sdk\tier0</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
