--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -747,6 +747,9 @@
     <ClCompile Include="..\tier0\crashhandler.cpp">
       <Filter>sdk\tier0</Filter>
     </ClCompile>
+    <ClCompile Include="..\vstdlib\autocompletefilelist.cpp">
+      <Filter>sdk\vstdlib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -2164,6 +2167,9 @@
     </ClInclude>
     <ClInclude Include="..\tier0\crashhandler.h">
       <Filter>sdk\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\autocompletefilelist.h">
+      <Filter>sdk\vstdlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
